adding new member registeration

--- a/src/main/java/GmsLogin.form
+++ b/src/main/java/GmsLogin.form
@@ -198,7 +198,7 @@
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Parchment" size="48" style="1"/>
+          <Font name="Algerian" size="48" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
