--- a/src/main/java/home.form
+++ b/src/main/java/home.form
@@ -14,6 +14,9 @@
               <Font name="Perpetua" size="18" style="1"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jMenu1MouseClicked"/>
+          </Events>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
@@ -139,7 +142,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Stencil" size="48" style="1"/>
+              <Font name="Algerian" size="48" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Welcome !"/>
           </Properties>
