--- a/src/main/java/GmsLogin.form
+++ b/src/main/java/GmsLogin.form
@@ -39,7 +39,9 @@
             </BevelBorder>
           </Border>
         </Property>
-        <Property name="opaque" type="boolean" value="false"/>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -214,7 +216,7 @@
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Hamza Raza\OneDrive\Desktop\FitDataKeeper-main\Project\_467f5b83-18fc-458e-b5f3-281dfd65ce06.jpeg"/>
+          <Image iconType="2" name="C:\Users\Hamza Raza\Downloads\GymBG.jpg"/>
         </Property>
       </Properties>
       <Constraints>
